--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--Icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
   <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="/style.css"/>
+  <link rel="stylesheet" href="/style.css"/>
   <title>Matthew's Landing</title>
 </head>
 <body>
