finalized html content

--- a/index.html
+++ b/index.html
@@ -11,59 +11,60 @@
 </head>
 <body>
   <header>
+    <nav class="top-nav">
+      <ul>
+        <li><a href="#">ABOUT ME</a></li>
+        <li><a href="#">EXPERIENCE</a></li>
+        <li><a href="#">SKILLS</a></li>
+        <li><a href="#">RESUME</a></li>
+        <li><a href="#">EMAIL ME</a></li>
+      </ul>
+    </nav>
     <h1>Hi, I'm Matthew Yang</h1>
-    <p>Welcome to my digital hub. Explore who I am, what I've done, and what I love to build.</p>
+    <p>Software Engineer | Fishing Enthusiast | Culinary Artist</p>
   </header>
 
   <!--HTML-->
   <div class="honeycomb">
     <div class="container">
       <div class="hexagon blue">
-        <div class="inner"><h1>01</h1></div>
+        <div class="inner"><h1>about me</h1></div>
       </div>
-      <div class="hexagon white">
-        <div class="inner"><h1>02</h1></div>
+      <div class="hexagon red">
+        <div class="inner"><h1>experience</h1></div>
       </div>
       <div class="hexagon border-image green">
-        <div class="inner"><h1>03</h1></div>
+        <div class="inner"><h1>skills</h1></div>
         <img src="p0.jpg">
       </div>
       <div class="hexagon purple">
         <div class="inner">
-          <h1><i class="fab fa-github"></i></h1>
+          <h2><i class="fab fa-github"></i></h2>
         </div>
       </div>
       <div class="hexagon dark">
-        <div class="inner"><h1>05</h1></div>
+        <div class="inner"><h1>resume</h1></div>
       </div>
-      <div class="hexagon green no-text">
-        <div class="inner"><h1>00</h1></div>
-      </div>
-      <div class="hexagon blue">
-        <div class="inner"><h1>07</h1></div>
-      </div>
-      <div class="hexagon bg-image purple no-text">
-        <div class="inner"><h1>00</h1></div>
-        <img src="p1.jpg">
-      </div>
-      <div class="hexagon green">
-        <div class="inner"><h1>09</h1></div>
-      </div>
-      <div class="hexagon bg-image dark">
-        <div class="inner"><h1>10</h1></div>
+      <div class="hexagon bg-image green no-text">
+        <div class="inner"></div>
         <img src="p2.jpg">
       </div>
-      <div class="hexagon bg-image red">
+      <div class="hexagon blue">
         <div class="inner">
-          <h1><i class="fab fa-facebook"></i></h1>
+          <h2><i class="fa-solid fa-envelope"></i></h2>
         </div>
-        <img src="p3.jpg">
+      </div>
+      <div class="hexagon bg-image purple no-text">
+        <div class="inner"></div>
+        <img src="p1.jpg">
       </div>
       <div class="hexagon orange">
-        <div class="inner"><h1>12</h1></div>
+        <div class="inner"><h1>projects</h1></div>
       </div>
-      <div class="hexagon red">
-        <div class="inner"><h1>13</h1></div>
+      <div class="hexagon dark">
+        <div class="inner">
+          <h2><i class="fab fa-linkedin"></i></h2>
+        </div>
       </div>
     </div>
   </div>
