added dynamic text and proper href links

--- a/index.html
+++ b/index.html
@@ -16,17 +16,25 @@
       <input type="checkbox" id="menu-toggle">
       <label for="menu-toggle" class="menu-icon"><i class="fas fa-bars"></i></label>
       <ul class="menu">
-        <li><a href="#">ABOUT ME</a></li>
-        <li><a href="#">EXPERIENCE</a></li>
-        <li><a href="#">SKILLS</a></li>
-        <li><a href="#">RESUME</a></li>
-        <li><a href="#">EMAIL ME</a></li>
+        <li><a href="about.html">ABOUT ME</a></li>
+        <li><a href="experience.html">EXPERIENCE</a></li>
+        <li><a href="skills.html">SKILLS</a></li>
+        <li><a href="resume.html">RESUME</a></li>
+        <li><a href="mailto:myang98732190@gmail.com">EMAIL ME</a></li>
       </ul>
     </div>
 
     <div class="intro">
-      <h1>Hi! I'm Matthew Yang</h1>
-      <p>Software Engineer | Fishing Enthusiast | Culinary Artist</p>
+      <h1 id="title">
+        <span id="title-text">Hi! I'm Matthew Yang</span><span class="cursor" aria-hidden="true"><span class="vbar"></span></span>
+      </h1>
+      <p id="subtitle">
+        <span class="subtitle-part">Software Engineer</span>
+        <span class="subtitle-part">|</span>
+        <span class="subtitle-part">Fishing Enthusiast</span>
+        <span class="subtitle-part">|</span>
+        <span class="subtitle-part">Culinary Artist</span>
+      </p>
     </div>
   </div>
   </header>
@@ -35,39 +43,52 @@
   <!--HTML-->
   <div class="honeycomb">
     <div class="container">
-      <div class="hexagon blue">
-        <div class="inner">
-          <h2><i class="fab fa-linkedin"></i></h2>
-        </div>
-      </div>
       <div class="hexagon purple">
-        <div class="inner"><h1>about me</h1></div>
+        <a href="about.html" class="inner"><h1>About Me</h1></a>
       </div>
-      <div class="hexagon red">
-        <div class="inner"><h1>experience</h1></div>
-      </div>
-      <div class="hexagon green">
-        <div class="inner">
-          <h2><i class="fab fa-github"></i></h2>
-        </div>
-      </div>
-      <div class="hexagon border-image blue">
-        <div class="inner"><h1>skills</h1></div>
-        <img src="p0.jpg">
-      </div>
-      <div class="hexagon bg-image green no-text">
+      <div class="hexagon bg-image yellow no-text">
         <div class="inner"></div>
         <img src="p2.jpg">
       </div>
-      <div class="hexagon dark">
-        <div class="inner"><h1>resume</h1></div>
+      <div class="hexagon orange">
+        <a href="experience.html" class="inner"><h1>Experience</h1></a>
       </div>
-      <div class="hexagon bg-image purple no-text">
+      <div class="hexagon bg-image green no-text">
+        <div class="inner"></div>
+        <img src="p0.jpg">
+      </div>
+      <div class="hexagon red">
+        <a href="skills.html" class="inner"><h1>Skills</h1></a>
+      </div>
+      <div class="hexagon blue">
+        <a href="https://www.linkedin.com/in/matthewyangucsd/" target="_blank" class="inner">
+          <h2><i class="fab fa-linkedin"></i></h2>
+        </a>
+      </div>
+      <div class="hexagon dark">
+        <a href="resume.html" class="inner"><h1>Resume</h1></a>
+      </div>
+      <div class="hexagon purple">
+        <a href="https://github.com/mYang25" target="_blank" class="inner">
+          <h2><i class="fab fa-github"></i></h2>
+        </a>
+      </div>
+      <div class="hexagon red">
+        <a href="projects.html" class="inner"><h1>Projects</h1></a>
+      </div>
+      <div class="hexagon bg-image green no-text">
         <div class="inner"></div>
         <img src="p1.jpg">
       </div>
-      <div class="hexagon orange">
-        <div class="inner"><h1>projects</h1></div>
+      <div class="hexagon purple">
+        <a href="pier.html" class="inner"><h1>The Pier</h1></a>
+      </div>
+      <div class="hexagon bg-image yellow no-text">
+        <div class="inner"></div>
+        <img src="p4.jpg">
+      </div>
+      <div class="hexagon blue">
+        <a href="kitchen.html" class="inner"><h1>The Kitchen</h1></a>
       </div>
     </div>
   </div>
