--- a/about.html
+++ b/about.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Me</title>
+  <link rel="stylesheet" href="about.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <h1>About Me</h1>
-  <p>Coming soon!</p>
+  <header>
+  <div class="header-content">
+  <!-- Dropdown Menu -->
+  <div class="dropdown-menu">
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">
+      <i class="fas fa-bars"></i>
+    </label>
+    <ul class="menu">
+      <li><a href="skills.html">SKILLS</a></li>
+      <li><a href="experience.html">EXPERIENCE</a></li>
+      <li><a href="skills.html">SKILLS</a></li>
+      <li><a href="resume.html">RESUME</a></li>
+      <li><a href="mailto:myang98732190@gmail.com">EMAIL ME</a></li>
+    </ul>
+  </div>
+
+  <div class="intro">
+    <h1 id="title">
+      <span id="title-text"></span><span class="cursor">|</span>
+    </h1>
+  </div>
+  <img src="p5.jpg" alt="Picture of Me" />
+  <p>
+  Matt is a dedicated Computer Science Master’s student at UCSD with a passion for building clean, efficient, and impactful code. With a natural curiosity and a drive to constantly improve, he approaches challenges with both technical precision and a humble, collaborative mindset. Whether it’s exploring new technologies, refining his programming skills, or working alongside others to bring ideas to life, Matt’s focus is always on creating solutions that are both functional and elegant. His friendly demeanor and genuine interest in helping others make him a valued teammate in any setting.
+  </p>
+
+  <p>
+    Beyond his academic and professional pursuits, he’s an avid fisherman who finds peace in the quiet rhythm of the water, a culinary artist who loves experimenting in the kitchen, and a devoted board game nerd. Whether coding or cooking or casting a fishing line, Matt brings creativity, enthusiasm, and authenticity to everything he does.
+  </p>
+  </div>
+  </header>
+
+  <script src="about.js"></script>
 </body>
 </html>
