--- a/resume.html
+++ b/resume.html
@@ -3,19 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Matthew Yang — Resume</title>
-  <meta name="description" content="Resume of Matthew Yang — Software Developer" />
+  <title>Resume</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="resume.js" type="application/ld+json"></script>
 
 </head>
-<body>
-  <a class="visually-hidden" href="#content">Skip to content</a>
-
-  <div class="toolbar">
-    <button class="btn" onclick="window.print()">Save as PDF</button>
-  </div>
-
+<body>htijfjj
   <main id="content" class="wrap" role="main">
     <header>
       <h1 class="name">Matthew Yang</h1>
