--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
   <script src="resume.js" type="application/ld+json"></script>
 
 </head>
-<body>htijfjj
+<body>
   <main id="content" class="wrap" role="main">
     <header>
       <h1 class="name">Matthew Yang</h1>
